--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -11,7 +11,7 @@
       </div>
     </header>
   
-    <section id="featured-auctions" class="mb-5">
+    <!-- <section id="featured-auctions" class="mb-5">
       <h2 class="text-center mb-4">Featured Auctions</h2>
       <div class="row">
         <div class="col-md-4 mb-4" *ngFor="let auction of featuredAuctions">
@@ -26,10 +26,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   
     <!-- Upcoming Auctions Section -->
-    <section id="upcoming-auctions" class="bg-light py-5 mb-5">
+    <!-- <section id="upcoming-auctions" class="bg-light py-5 mb-5">
       <div class="container">
         <h2 class="text-center mb-4">Upcoming Auctions</h2>
         <div class="row">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   
     <!-- About Us Section -->
     <!-- About Us Section -->
