--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -27,9 +27,9 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="/all-auctions">Auctions</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link text-white" href="/costumers">Costumers</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/payments">Payments</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="/messages">Messages</a>
         </li>
